# miyoo_mini_plus_lvgl_gamepad_demo

./: .gitignore  CMakeLists.txt  README.md  build_miyoo.sh  build_native.sh  lv_conf.h  miyoo-armv7.cmake
gamepad_ui/: CMakeLists.txt  file_list_gen.cmake  gamepad_ui.c  gamepad_ui.h  gamepad_ui_gen.c  gamepad_ui_gen.h  globals.xml  project.xml
gamepad_ui/images/: img_A_glow_data.c  img_B_glow_data.c  img_L1_glow_data.c  img_L2_glow_data.c  img_R1_glow_data.c  img_R2_glow_data.c  img_X_glow_data.c  img_Y_glow_data.c  img_arrow_glow_data.c  img_background_data.c  img_lvgl_glow_data.c  img_select_start_glow_data.c
gamepad_ui/preview-bin/: lved-runtime.js
gamepad_ui/screens/screen_main/: screen_main.xml  screen_main_gen.c
sd_card_deploy/LVGLGamepadDemo/: config.json  launch.sh
src/: main.c
